<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="MainActivity">

    <EditText
        android:id="@+id/loanAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:hint="@string/A"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="53dp" />

    <EditText
        android:id="@+id/interestRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loanAmount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:hint ="@string/R"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="127dp" />

    <EditText
        android:id="@+id/loanTerm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/interestRate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:hint ="@string/T"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="127dp" />

    <EditText
        android:id="@+id/loanFee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loanTerm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:hint ="@string/F"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="127dp" />

    <EditText
        android:id="@+id/minimumPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loanFee"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:hint ="@string/M"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="127dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/minimumPay"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/Calculate"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="127dp" />

    <TextView
        android:id="@+id/monthly_payment_label"
        android:text="@string/monthly"
        android:paddingLeft="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="32dp" />

    <TextView
        android:id="@+id/monthly_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_alignParentRight="true"
        android:layout_marginTop="32dp"
        android:ems="10"/>

    <TextView
        android:id="@+id/total_interest_text"
        android:text="@string/interest"
        android:paddingLeft="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/monthly_payment"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/total_interest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/monthly_payment"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"
        android:ems="10" />
</RelativeLayout>